5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4354/executions/1734_2506.log
== TEST (2019-05-11 17:59:44) 
-- CODE:
q_inicial = int(input("quantidade inicial: "))
perc = float(input("percentual de crescimento: "))
quant = int(input("quantidade de pirarucus retirados: "))
perc = perc/100
t = 0

while(q_inicial <= quant):
	q_inicial = q_incial + q_inicial * perc
	t = t + 1
	print(t)
	if(q_inicial >= 12000):
		print("LIMITE")
	if(q_inicial <= quant):
		print("EXTINCAO")
	quant = int(input("quantidade de pirarucus retirados: "))

	
-- OUTPUT:
9
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 18:00:20) 
-- CODE:
q_inicial = int(input("quantidade inicial: "))
perc = float(input("percentual de crescimento: "))
quant = int(input("quantidade de pirarucus retirados: "))
perc = perc/100
t = 0

while(q_inicial >=  quant):
	q_inicial = q_incial + q_inicial * perc
	t = t + 1
	print(t)
	if(q_inicial >= 12000):
		print("LIMITE")
	if(q_inicial <= quant):
		print("EXTINCAO")
	quant = int(input("quantidade de pirarucus retirados: "))

	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    q_inicial = q_incial + q_inicial * perc
NameError: name 'q_incial' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 18:00:52) 
-- CODE:
q_inicial = int(input("quantidade inicial: "))
perc = float(input("percentual de crescimento: "))
quant = int(input("quantidade de pirarucus retirados: "))
perc = perc/100
t = 0

while(q_inicial >= quant):
	q_inicial = q_inicial + q_inicial * perc
	t = t + 1
	print(t)
	if(q_inicial >= 12000):
		print("LIMITE")
	if(q_inicial <= quant):
		print("EXTINCAO")
	quant = int(input("quantidade de pirarucus retirados: "))

	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 15, in <module>
    quant = int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 18:01:25) 
-- CODE:
q_inicial = int(input("quantidade inicial: "))
perc = float(input("percentual de crescimento: "))
quant = int(input("quantidade de pirarucus retirados: "))
perc = perc/100
t = 0

while(q_inicial <= quant):
	q_inicial = q_inicial + q_inicial * perc
	t = t + 1
	print(t)
	if(q_inicial >= 12000):
		print("LIMITE")
	if(q_inicial <= quant):
		print("EXTINCAO")
	quant = int(input("quantidade de pirarucus retirados: "))

	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 15, in <module>
    quant = int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 18:01:54) 
-- CODE:
q_inicial = int(input("quantidade inicial: "))
perc = float(input("percentual de crescimento: "))
quant = int(input("quantidade de pirarucus retirados: "))
perc = perc/100
t = 0

while(q_inicial <= quant):
	q_inicial = q_inicial + q_inicial * perc
	t = t + 1
	print(t)
	quant = int(input("quantidade de pirarucus retirados: "))
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 15, in <module>
    quant = int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 18:03:17) 
-- CODE:
q_inicial = int(input("quantidade inicial: "))
perc = float(input("percentual de crescimento: "))
quant = int(input("quantidade de pirarucus retirados: "))
perc = perc/100
t = 0
while(q_inicial > quant):
	q_inicial = q_inicial + q_inicial * perc
	t = t + 1
	print(t)
	quant = int(input("quantidade de pirarucus retirados: "))

	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    quant = int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 18:03:34) 
-- CODE:
q_inicial = int(input("quantidade inicial: "))
perc = float(input("percentual de crescimento: "))
quant = int(input("quantidade de pirarucus retirados: "))
perc = perc/100
t = 0
while(q_inicial > quant):
	q_inicial = q_inicial + q_inicial * perc
	t = t + 1
	print(t)
	quant = int(input("quantidade de pirarucus retirados: "))

	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    quant = int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 18:14:59) 
-- CODE:
q_inicial = int(input("quantidade inicial: "))
perc = float(input("percentual de crescimento: "))
quant = int(input("quantidade de pirarucus retirados: "))
perc = perc/100
t = 0
while(quant =! 1):
	q_inicial = q_inicial + q_inicial * perc
	t = t + 1
	print(t)
	if(q_inicial-quant == 0):
		print("EXTINCAO")
	elif(q_inical - quant == 12000):
		print("LIMITE")
	else:
		quant == -1
	quant = int(input("quantidade de pirarucus retirados: "))
	
		
-- ERROR:
File "XXXX", line 6
    while(quant =! 1):
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 18:15:06) 
-- CODE:
q_inicial = int(input("quantidade inicial: "))
perc = float(input("percentual de crescimento: "))
quant = int(input("quantidade de pirarucus retirados: "))
perc = perc/100
t = 0
while(quant != 1):
	q_inicial = q_inicial + q_inicial * perc
	t = t + 1
	print(t)
	if(q_inicial-quant == 0):
		print("EXTINCAO")
	elif(q_inical - quant == 12000):
		print("LIMITE")
	else:
		quant == -1
	quant = int(input("quantidade de pirarucus retirados: "))
	
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    elif(q_inical - quant == 12000):
NameError: name 'q_inical' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 18:15:24) 
-- CODE:
q_inicial = int(input("quantidade inicial: "))
perc = float(input("percentual de crescimento: "))
quant = int(input("quantidade de pirarucus retirados: "))
perc = perc/100
t = 0
while(quant != 1):
	q_inicial = q_inicial + q_inicial * perc
	t = t + 1
	print(t)
	if(q_inicial-quant == 0):
		print("EXTINCAO")
	elif(q_inicial - quant == 12000):
		print("LIMITE")
	else:
		quant == -1
	quant = int(input("quantidade de pirarucus retirados: "))
	
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 16, in <module>
    quant = int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 18:15:59) 
-- CODE:
q_inicial = int(input("quantidade inicial: "))
perc = float(input("percentual de crescimento: "))
quant = int(input("quantidade de pirarucus retirados: "))
perc = perc/100
t = 0
while(quant != 1):
	q_inicial = q_inicial + q_inicial * perc
	t = t + 1
	print(t)
	if(q_inicial-quant == 0):
		print("EXTINCAO")
	elif(q_inicial - quant == 12000):
		print("LIMITE")
	else:
		quant == -1
	quant = int(input("quantidade de pirarucus retirados: "))
	
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 16, in <module>
    quant = int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 18:16:30) 
-- CODE:
q_inicial = int(input("quantidade inicial: "))
perc = float(input("percentual de crescimento: "))
quant = int(input("quantidade de pirarucus retirados: "))
perc = perc/100
t = 0
while(quant != 1):
	q_inicial = q_inicial + q_inicial * perc
	t = t + 1
	print(t)
	if(q_inicial-quant == 0):
		print("EXTINCAO")
	elif(q_inicial - quant == 12000):
		print("LIMITE")
	else:
		quant == -1
	
	
	
		
-- OUTPUT:
1
2
3
4
5
6
7
8
9
10
11
12
13
14
15
16
17
18
19
20
21
22
23
24
25
26
27
28
29
30
31
32
33
34
35
36
37
38
39
40
41
42
43
44
45
46
47
48
49
50
51
52
53
54
55
56
57
58
59
60
61
62
63
64
65
66
67
68
69
70
71
72
73
74
75
76
77
78
79
80
81
82
83
84
85
86
87
88
89
90
91
92
93
94
95
96
97
98
99
100
101
102
103
104
105
106
107
108
109
110
111
112
113
114
115
116
117
118
119
120
121
122
123
124
125
126
127
128
129
130
131
132
133
134
135
136
137
138
139
140
141
142
143
144
145
146
147
148
149
150
151
152
153
154
155
156
157
158
159
160
161
162
163
164
165
166
167
168
169
170
171
172
173
174
175
176
177
178
179
180
181
182
183
184
185
186
187
188
189
190
191
192
193
194
195
196
197
198
199
200
201
202
203
204
205
206
207
208
209
210
211
212
213
214
215
216
217
218
219
220
221
222
223
224
225
226
227
228
229
230
231
232
233
234
235
236
237
238
239
240
241
242
243
244
245
246
247
248
249
250
251
252
253
254
255
256
257
258
259
260
261
262
263
264
265
266
267
268
269
270
271
272
273
274
275
276
277
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 18:17:01) 
-- CODE:
q_inicial = int(input("quantidade inicial: "))
perc = float(input("percentual de crescimento: "))
quant = int(input("quantidade de pirarucus retirados: "))
perc = perc/100
t = 0
while(quant != 1):
	q_inicial = q_inicial + q_inicial * perc
	t = t + 1
	print(t)
	if(q_inicial-quant == 0):
		print("EXTINCAO")
	elif(q_inicial - quant == 12000):
		print("LIMITE")
	else:
		quant == -1
	
	
	
		
-- OUTPUT:
1
2
3
4
5
6
7
8
9
10
11
12
13
14
15
16
17
18
19
20
21
22
23
24
25
26
27
28
29
30
31
32
33
34
35
36
37
38
39
40
41
42
43
44
45
46
47
48
49
50
51
52
53
54
55
56
57
58
59
60
61
62
63
64
65
66
67
68
69
70
71
72
73
74
75
76
77
78
79
80
81
82
83
84
85
86
87
88
89
90
91
92
93
94
95
96
97
98
99
100
101
102
103
104
105
106
107
108
109
110
111
112
113
114
115
116
117
118
119
120
121
122
123
124
125
126
127
128
129
130
131
132
133
134
135
136
137
138
139
140
141
142
143
144
145
146
147
148
149
150
151
152
153
154
155
156
157
158
159
160
161
162
163
164
165
166
167
168
169
170
171
172
173
174
175
176
177
178
179
180
181
182
183
184
185
186
187
188
189
190
191
192
193
194
195
196
197
198
199
200
201
202
203
204
205
206
207
208
209
210
211
212
213
214
215
216
217
218
219
220
221
222
223
224
225
226
227
228
229
230
231
232
233
234
235
236
237
238
239
240
241
242
243
244
245
246
247
248
249
250
251
252
253
254
255
256
257
258
259
260
261
262
263
264
265
266
267
268
269
270
271
272
273
274
275
276
277
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 18:18:38) 
-- CODE:
q_inicial = int(input("quantidade inicial: "))
perc = float(input("percentual de crescimento: "))
quant = int(input("quantidade de pirarucus retirados: "))
perc = perc/100
t = 0
while(quant <= q_inicial):
	q_inicial = q_inicial + q_inicial * perc
	t = t + 1
	print(t)
	if(q_inicial-quant == 0):
		print("EXTINCAO")
	elif(q_inicial - quant == 12000):
		print("LIMITE")
	quant = int(input("q: "))
	
	
	
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 14, in <module>
    quant = int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 18:19:59) 
-- CODE:
q_inicial = int(input("quantidade inicial: "))
perc = float(input("percentual de crescimento: "))
quant = int(input("quantidade de pirarucus retirados: "))
perc = perc/100
t = 0
while(quant < q_inicial):
	q_inicial = q_inicial + q_inicial * perc
	t = t + 1
	print(t)
	if(q_inicial-quant == 0):
		print("EXTINCAO")
	elif(q_inicial - quant == 12000):
		print("LIMITE")
	quant = int(input("q: "))
	
	
	
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 14, in <module>
    quant = int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 18:20:16) 
-- CODE:
q_inicial = int(input("quantidade inicial: "))
perc = float(input("percentual de crescimento: "))
quant = int(input("quantidade de pirarucus retirados: "))
perc = perc/100
t = 0
while(quant < q_inicial):
	q_inicial = q_inicial + q_inicial * perc
	t = t + 1
	print(t)
	if(q_inicial-quant == 0):
		print("EXTINCAO")
	elif(q_inicial - quant == 12000):
		print("LIMITE")
	quant = int(input("q: "))
	
	
	
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 14, in <module>
    quant = int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 18:21:28) 
-- CODE:
q_inicial = int(input("quantidade inicial: "))
perc = float(input("percentual de crescimento: "))
quant = int(input("quantidade de pirarucus retirados: "))
perc = perc/100
t = 0
while(quant < q_inicial):
	q_inicial = q_inicial + q_inicial * perc
	t = t + 1
	print(t)
	print(q_inicial)
	
		
-- OUTPUT:
1
1308.04
2
1386.5224
3
1469.7137440000001
4
1557.8965686400002
5
1651.3703627584002
6
1750.4525845239043
7
1855.4797395953385
8
1966.8085239710588
9
2084.817035409322
10
2209.9060575338817
11
2342.5004209859144
12
2483.0504462450695
13
2632.0334730197737
14
2789.9554814009603
15
2957.3528102850178
16
3134.793978902119
17
3322.881617636246
18
3522.254514694421
19
3733.589785576086
20
3957.605172710651
21
4195.06148307329
22
4446.765172057688
23
4713.571082381149
24
4996.385347324018
25
5296.168468163459
26
5613.938576253267
27
5950.774890828463
28
6307.821384278171
29
6686.290667334861
30
7087.4681073749525
31
7512.7161938174495
32
7963.479165446496
33
8441.287915373287
34
8947.765190295684
35
9484.631101713425
36
10053.70896781623
37
10656.931505885204
38
11296.347396238316
39
11974.128240012615
40
12692.575934413371
41
13454.130490478174
42
14261.378319906864
43
15117.061019101277
44
16024.084680247353
45
16985.529761062193
46
18004.661546725925
47
19084.941239529482
48
20230.0377139
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 18:22:06) 
-- CODE:
q_inicial = int(input("quantidade inicial: "))
perc = float(input("percentual de crescimento: "))
quant = int(input("quantidade de pirarucus retirados: "))
perc = perc/100
t = 0
while(quant < q_inical):
	q_inicial = q_inicial + q_inicial * perc
	t = t + 1
	print(t)
	print(q_inicial)
	
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    while(quant < q_inical):
NameError: name 'q_inical' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 18:22:26) 
-- CODE:
q_inicial = int(input("quantidade inicial: "))
perc = float(input("percentual de crescimento: "))
quant = int(input("quantidade de pirarucus retirados: "))
perc = perc/100
t = 0
while(quant < q_inicial):
	q_inicial = q_inicial + q_inicial * perc
	t = t + 1
	print(t)
	print(q_inicial)
	
		
-- OUTPUT:
1
1308.04
2
1386.5224
3
1469.7137440000001
4
1557.8965686400002
5
1651.3703627584002
6
1750.4525845239043
7
1855.4797395953385
8
1966.8085239710588
9
2084.817035409322
10
2209.9060575338817
11
2342.5004209859144
12
2483.0504462450695
13
2632.0334730197737
14
2789.9554814009603
15
2957.3528102850178
16
3134.793978902119
17
3322.881617636246
18
3522.254514694421
19
3733.589785576086
20
3957.605172710651
21
4195.06148307329
22
4446.765172057688
23
4713.571082381149
24
4996.385347324018
25
5296.168468163459
26
5613.938576253267
27
5950.774890828463
28
6307.821384278171
29
6686.290667334861
30
7087.4681073749525
31
7512.7161938174495
32
7963.479165446496
33
8441.287915373287
34
8947.765190295684
35
9484.631101713425
36
10053.70896781623
37
10656.931505885204
38
11296.347396238316
39
11974.128240012615
40
12692.575934413371
41
13454.130490478174
42
14261.378319906864
43
15117.061019101277
44
16024.084680247353
45
16985.529761062193
46
18004.661546725925
47
19084.941239529482
48
20230.0377139
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 18:35:13) 
-- CODE:
q_inicial = int(input("quantidade inicial: "))
perc = float(input("percentual de crescimento: "))
quant = int(input("quantidade de pirarucus retirados: "))
perc = perc/100
t = 0
while(quant > q_inicial):
	q_inicial = q_inicial + q_inicial * perc
	t = t + 1
	print(t)
	print(q_inicial)
	quant = int(input("quantidade de pirarucus retirados: "))
		
-- OUTPUT:
1
1308.04
2
1386.5224
3
1469.7137440000001
4
1557.8965686400002
5
1651.3703627584002
6
1750.4525845239043
7
1855.4797395953385
8
1966.8085239710588
9
2084.817035409322
10
2209.9060575338817
11
2342.5004209859144
12
2483.0504462450695
13
2632.0334730197737
14
2789.9554814009603
15
2957.3528102850178
16
3134.793978902119
17
3322.881617636246
18
3522.254514694421
19
3733.589785576086
20
3957.605172710651
21
4195.06148307329
22
4446.765172057688
23
4713.571082381149
24
4996.385347324018
25
5296.168468163459
26
5613.938576253267
27
5950.774890828463
28
6307.821384278171
29
6686.290667334861
30
7087.4681073749525
31
7512.7161938174495
32
7963.479165446496
33
8441.287915373287
34
8947.765190295684
35
9484.631101713425
36
10053.70896781623
37
10656.931505885204
38
11296.347396238316
39
11974.128240012615
40
12692.575934413371
41
13454.130490478174
42
14261.378319906864
43
15117.061019101277
44
16024.084680247353
45
16985.529761062193
46
18004.661546725925
47
19084.941239529482
48
20230.0377139
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 18:35:59) 
-- CODE:
q_inicial = int(input("quantidade inicial: "))
perc = float(input("percentual de crescimento: "))
quant = int(input("quantidade de pirarucus retirados: "))
perc = perc/100
t = 0
while(quant < q_inicial):
	q_inicial = q_inicial + q_inicial * perc
	t = t + 1
	print(t)
	print(q_inicial)
	quant = int(input("quantidade de pirarucus retirados: "))
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    quant = int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 18:36:28) 
-- CODE:
q_inicial = int(input("quantidade inicial: "))
perc = float(input("percentual de crescimento: "))
quant = int(input("quantidade de pirarucus retirados: "))
perc = perc/100
t = 0
while(quant < q_inicial):
	q_inicial = q_inicial + q_inicial * perc
	t = t + 1
	print(t)
	print(q_inicial)
	quant = int(input("quantidade de pirarucus retirados: "))
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    quant = int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 18:37:10) 
-- CODE:
q_inicial = int(input("quantidade inicial: "))
perc = float(input("percentual de crescimento: "))
quant = int(input("quantidade de pirarucus retirados: "))
perc = perc/100
t = 0
while(quant < q_inicial):
	q_inicial = q_inicial + q_inicial * perc
	q_total = q_inicial - quant
	t = t + 1	
	print(t)
	print(q_inicial)
	quant = int(input("quantidade de pirarucus retirados: "))
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    quant = int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 18:37:25) 
-- CODE:
q_inicial = int(input("quantidade inicial: "))
perc = float(input("percentual de crescimento: "))
quant = int(input("quantidade de pirarucus retirados: "))
perc = perc/100
t = 0
while(quant < q_inicial):
	q_inicial = q_inicial + q_inicial * perc
	q_total = q_inicial - quant
	t = t + 1	
	print(t)
	print(q_inicial)
	quant = int(input("quantidade de pirarucus retirados: "))
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    quant = int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 18:37:33) 
-- CODE:
q_inicial = int(input("quantidade inicial: "))
perc = float(input("percentual de crescimento: "))
quant = int(input("quantidade de pirarucus retirados: "))
perc = perc/100
t = 0
while(quant < q_inicial):
	q_inicial = q_inicial + q_inicial * perc
	q_total = q_inicial - quant
	t = t + 1	
	print(t)
	print(q_total)
	quant = int(input("quantidade de pirarucus retirados: "))
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    quant = int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 18:37:40) 
-- CODE:
q_inicial = int(input("quantidade inicial: "))
perc = float(input("percentual de crescimento: "))
quant = int(input("quantidade de pirarucus retirados: "))
perc = perc/100
t = 0
while(quant < q_inicial):
	q_inicial = q_inicial + q_inicial * perc
	q_total = q_inicial - quant
	t = t + 1	
	print(t)
	print(q_total)
	quant = int(input("quantidade de pirarucus retirados: "))
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    quant = int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 18:39:15) 
-- CODE:
q_inicial = int(input("quantidade inicial: "))
perc = float(input("percentual de crescimento: "))
quant = int(input("quantidade de pirarucus retirados: "))
perc = perc/100
t = 0
while(quant < q_inicial):
	q_inicial = q_inicial + q_inicial * perc
	q_total = q_inicial - quant
	t = t + 1
print(t)
print(q_total)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    quant = int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 18:39:15) 
-- CODE:
q_inicial = int(input("quantidade inicial: "))
perc = float(input("percentual de crescimento: "))
quant = int(input("quantidade de pirarucus retirados: "))
perc = perc/100
t = 0
while(quant < q_inicial):
	q_inicial = q_inicial + q_inicial * perc
	q_total = q_inicial - quant
	t = t + 1
print(t)
print(q_total)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    quant = int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 18:39:39) 
-- CODE:
q_inicial = int(input("quantidade inicial: "))
perc = float(input("percentual de crescimento: "))
quant = int(input("quantidade de pirarucus retirados: "))
perc = perc/100
t = 0
while(quant > q_inicial):
	q_inicial = q_inicial + q_inicial * perc
	q_total = q_inicial - quant
	t = t + 1
print(t)
print(q_total)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    print(q_total)	
NameError: name 'q_total' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 18:40:24) 
-- CODE:
q_inicial = int(input("quantidade inicial: "))
perc = float(input("percentual de crescimento: "))
quant = int(input("quantidade de pirarucus retirados: "))
perc = perc/100
t = 0
while(quant > q_inicial):
	q_inicial = q_inicial + q_inicial * perc
	q_total = q_inicial - quant
	t = t + 1
print(t)
print(q_total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    print(q_total)
NameError: name 'q_total' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 18:41:06) 
-- CODE:
q_inicial = int(input("quantidade inicial: "))
perc = float(input("percentual de crescimento: "))
quant = int(input("quantidade de pirarucus retirados: "))
perc = perc/100
t = 0
q_total = 0
while(quant > q_inicial):
	q_inicial = q_inicial + q_inicial * perc
	q_total = q_total + (q_inicial - quant)
	t = t + 1
print(t)
print(q_total)
-- OUTPUT:
0
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 18:43:50) 
-- CODE:
q_inicial = int(input("quantidade inicial: "))
perc = float(input("percentual de crescimento: "))
quant = int(input("quantidade de pirarucus retirados: "))
perc = perc/100
t = 0
q_total = 0
while(quant < q_inicial):
	q_inicial = q_inicial + q_inicial * perc
	q_total = q_total + (q_inicial - quant)
	t = t + 1
print(t)
print(q_total)
-- OUTPUT:
0
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 18:45:43) 
-- CODE:
q_inicial = int(input("quantidade inicial: "))
perc = float(input("percentual de crescimento: "))
quant = int(input("quantidade de pirarucus retirados: "))
perc = perc/100
t = 0
q_total = 0
while(quant < q_inicial):
	q_inicial = q_inicial + q_inicial * perc
	q_inicial = q_inicial - quant
	t = t + 1
print(t)
print(q_inicial)
-- OUTPUT:
13
82.94488769198523
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 18:46:04) 
-- CODE:
q_inicial = int(input("quantidade inicial: "))
perc = float(input("percentual de crescimento: "))
quant = int(input("quantidade de pirarucus retirados: "))
perc = perc/100
t = 0
q_total = 0
while(quant > q_inicial):
	q_inicial = q_inicial + q_inicial * perc
	q_inicial = q_inicial - quant
	t = t + 1
print(t)
print(q_inicial)
-- OUTPUT:
0
1234
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 18:57:01) 
-- CODE:
q_inicial = int(input("quantidade inicial: "))
perc = float(input("percentual de crescimento: "))
quant = int(input("quantidade de pirarucus retirados: "))
perc = perc/100
soma = q_inical
t = 0
while(0 <= q_inicial <= 12000):
	soma = soma + ((q_inicial * perc) - quant)
	t = t + 1
print(t)
if(soma <= 0):
	print("EXTINCAO")
if(soma >= 12000):
	print("LIMITE")
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    soma = q_inical
NameError: name 'q_inical' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 18:57:15) 
-- CODE:
q_inicial = int(input("quantidade inicial: "))
perc = float(input("percentual de crescimento: "))
quant = int(input("quantidade de pirarucus retirados: "))
perc = perc/100
soma = q_inicial
t = 0
while(0 <= q_inicial <= 12000):
	soma = soma + ((q_inicial * perc) - quant)
	t = t + 1
print(t)
if(soma <= 0):
	print("EXTINCAO")
if(soma >= 12000):
	print("LIMITE")
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    soma = q_inical
NameError: name 'q_inical' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 18:59:08) 
-- CODE:
q_inicial = int(input("quantidade inicial: "))
perc = float(input("percentual de crescimento: "))
quant = int(input("quantidade de pirarucus retirados: "))
perc = perc/100
t = 0
while(0 <= q_inicial <= 12000):
	q_inicial = (q_inicial + q_inicial * perc) - quant
	t = t + 1
print(t)
if(q_inicial <= 0):
	print("EXTINCAO")
if(q_inicial >= 12000):
	print("LIMITE")
		
-- OUTPUT:
14
EXTINCAO
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-11 19:01:07) 
-- CODE:
q_inicial = int(input("quantidade inicial: "))
perc = float(input("percentual de crescimento: "))
quant = int(input("quantidade de pirarucus retirados: "))
perc = perc/100
t = 0
while(0 <= q_inicial <= 12000):
	q_inicial = (q_inicial + q_inicial * perc) - quant
	t = t + 1
if(q_inicial <= 0):
	print("EXTINCAO")
	print(t)
if(q_inicial >= 12000):
	print("LIMITE")
	print(t)

-- EXECUTION TIME:
0.187712
-- TEST CASE 1:
---- input:
1234
6
135
---- correct output:
EXTINCAO
14
---- user output:
EXTINCAO
14
-- TEST CASE 2:
---- input:
579
37
26
---- correct output:
LIMITE
11
---- user output:
LIMITE
11
-- TEST CASE 3:
---- input:
6789
45
2345
---- correct output:
LIMITE
4
---- user output:
LIMITE
4
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
